2020-06-04  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Resolves #91587: Streamline some redundant code in language pack
    * Resolves #91590: Fix ordering of record lists in current language in backend

2020-06-03  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

    * Resolves #91250: Add php configuration file for Extbase persistence mapping
    * Resolves #90274: Add support for PHP 7.4
    * Resolves #91251: Add Symfony dependency injection configuration
    * Resolves #91567: Add php configuration file for Extbase persistence mapping to generated language pack
    * Resolves #91575: Use Symfony expression language for TypoScript conditions
    * Resolves #91252: Adapt to changed arguments of Extensionmanager\Utility\EmConfUtility\includeEmConf in TYPO3 10
    * Resolves #91577: Delete @lazy annotation removed in TYPO3 10
    * Resolves #90741: Enable in TYPO3 LTS 10
    * Update version to 6.8.0

2020-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #88867: Raise PHP dependency to < 7.4

2019-10-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #88683: Updater uses default columns in TYPO3 9
	* Resolves #88780: Undefined variable usage in the DatabaseUpdateUtility.php
	* Resolves #89443: Update subdivisions of Italy
	* Update version to 6.7.5

2019-05-28  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #82132: Composer install fails with additional languages required at the same time

2019-05-21  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #87983: The name of capital of Ukraine should be 'Kyiv'
	* Resolves #87943: Change Country Name Macedonia to North Macedonia
	* Resolves #87877: LocalizationUtility missing import for TYPO3\CMS\Core\Site\Entity\SiteLanguage in TYPO3 9 LTS

2019-01-04  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #87243: Constant editor fails with class not found exception
	* Resolves #87329: Fix non-UTF-8 character in ext_emconf