@@ -1,11 +1,10 @@
 <?php
-
 namespace SJBR\StaticInfoTables;
 
 /*
  *  Copyright notice
  *
- *  (c) 2013-2019 Stanislas Rolland <typo3(arobas)sjbr.ca>
+ *  (c) 2013-2020 Stanislas Rolland <typo32020(arobas)sjbr.ca>
  *  All rights reserved
  *
  *  This script is part of the Typo3 project. The Typo3 project is
@@ -30,9 +29,11 @@ use SJBR\StaticInfoTables\Utility\DatabaseUpdateUtility;
 use TYPO3\CMS\Core\Database\ConnectionPool;
 use TYPO3\CMS\Core\Database\Schema\SchemaMigrator;
 use TYPO3\CMS\Core\Database\Schema\SqlReader;
+use TYPO3\CMS\Core\Registry;
 use TYPO3\CMS\Core\Utility\ExtensionManagementUtility;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 use TYPO3\CMS\Core\Utility\VersionNumberUtility;
+use TYPO3\CMS\Extbase\Mvc\Web\Routing\UriBuilder;
 use TYPO3\CMS\Extbase\Object\ObjectManager;
 use TYPO3\CMS\Extbase\Utility\LocalizationUtility;
 use TYPO3\CMS\Extensionmanager\Utility\InstallUtility;
@@ -58,6 +59,11 @@ class ext_update
     protected $installTool;
 
     /**
+     * @var Registry
+     */
+    protected $registry;
+
+    /**
      * Main function, returning the HTML content
      *
      * @return string HTML
@@ -65,9 +71,9 @@ class ext_update
     public function main()
     {
         $content = '';
-
         $this->objectManager = GeneralUtility::makeInstance(ObjectManager::class);
         $this->installTool = $this->objectManager->get(InstallUtility::class);
+        $this->registry = $this->objectManager->get(Registry::class);
         if (VersionNumberUtility::convertVersionNumberToInteger(VersionNumberUtility::getNumericTypo3Version())
             < 9000000) {
             $sqlSchemaMigrationService =
@@ -75,40 +81,46 @@ class ext_update
             $this->installTool->injectInstallToolSqlParser($sqlSchemaMigrationService);
         }
         $databaseUpdateUtility = GeneralUtility::makeInstance(DatabaseUpdateUtility::class);
-
         // Clear the class cache
         $classCacheManager = GeneralUtility::makeInstance(ClassCacheManager::class);
         $classCacheManager->reBuild();
 
-        // Process the database updates of this base extension (we want to re-process these updates every time the update script is invoked)
-        $extensionSitePath =
-            ExtensionManagementUtility::extPath(GeneralUtility::camelCaseToLowerCaseUnderscored($this->extensionName));
-        $content .= '<p>' . nl2br(LocalizationUtility::translate('updateTables', $this->extensionName)) . '</p>';
-        $this->importStaticSqlFile($extensionSitePath);
-
-        // Get the extensions which want to extend static_info_tables
-        $loadedExtensions = array_unique(ExtensionManagementUtility::getLoadedExtensionListArray());
-        foreach ($loadedExtensions as $extensionKey) {
-            $extensionInfoFile =
-                ExtensionManagementUtility::extPath($extensionKey)
-                . 'Configuration/DomainModelExtension/StaticInfoTables.txt';
-            if (file_exists($extensionInfoFile)) {
-                // We need to reprocess the database structure update sql statements (ext_tables)
-                $this->processDatabaseUpdates($extensionKey);
-                // Now we process the static data updates (ext_tables_static+adt)
-                // Note: The Install Tool Utility does not handle sql update statements
-                $databaseUpdateUtility->doUpdate($extensionKey);
-                $content .= '<p>' . nl2br(LocalizationUtility::translate('updateLanguageLabels', $this->extensionName))
-                    . ' ' . $extensionKey . '</p>';
+        if ($this->isUpdateRequired()) {
+			// Process the database updates of this base extension (we want to re-process these updates every time the update script is invoked)
+			// unless there was no change in the version numbers of the static info tables and language packs installed
+			$extensionSitePath = ExtensionManagementUtility::extPath(GeneralUtility::camelCaseToLowerCaseUnderscored($this->extensionName));
+			$content .= '<p>' . nl2br(LocalizationUtility::translate('updateTables', $this->extensionName)) . '</p>';
+			$this->importStaticSqlFile($extensionSitePath);
+			// Get the extensions which want to extend static_info_tables
+			$loadedExtensions = array_unique(ExtensionManagementUtility::getLoadedExtensionListArray());
+			$languagePackContent = '';
+			foreach ($loadedExtensions as $extensionKey) {
+				if ($this->isStaticInfoTablesExtension($extensionKey)) {
+					// We need to reprocess the database structure update sql statements (ext_tables)
+					$this->processDatabaseUpdates($extensionKey);
+					// Now we process the static data updates (ext_tables_static+adt)
+					// Note: The Install Tool Utility does not handle sql update statements
+					$databaseUpdateUtility->doUpdate($extensionKey);
+					$languagePackContent .= '<p>' . nl2br(LocalizationUtility::translate('updateLanguageLabels', $this->extensionName, [$extensionKey])) . '</p>';
+				}
+			}
+			$this->storeLastUpdateStatus();
+			if ($languagePackContent) {
+				$content .= $languagePackContent;
+			} else {
+				// No additional update was required as no language pack was installed
+				$content .= '<p>' . nl2br(LocalizationUtility::translate('nothingToDo', $this->extensionName)) . '</p>';
+			}
+			// Notice for old language packs
+			$content .= '<p>' . nl2br(LocalizationUtility::translate('update.oldLanguagePacks', $this->extensionName)) . '</p>';
+        } else {
+            $content .= '<p>' . nl2br(LocalizationUtility::translate('noVersionChangeSinceLastUpdate', $this->extensionName)) . '</p>';
+            if ($this->isBackendRequest()) {
+            	$forceUpdateUrl = $this->buildForceUpdateUrl();
+                $content .= '<p><a href="' . htmlspecialchars($forceUpdateUrl) . '" class="btn btn-primary">'
+                    . LocalizationUtility::translate('forceUpdate', $this->extensionName) . '</a></p>';
             }
         }
-        if (!$content) {
-            // Nothing to do
-            $content .= '<p>' . nl2br(LocalizationUtility::translate('nothingToDo', $this->extensionName)) . '</p>';
-        }
-        // Notice for old language packs
-        $content .= '<p>' . nl2br(LocalizationUtility::translate('update.oldLanguagePacks', $this->extensionName))
-            . '</p>';
         return $content;
     }
 
@@ -128,19 +140,17 @@ class ext_update
             $extTablesSqlContent .= GeneralUtility::getUrl($extTablesSqlFile);
         }
         if ($extTablesSqlContent !== '') {
-            if (VersionNumberUtility::convertVersionNumberToInteger(VersionNumberUtility::getNumericTypo3Version())
-                < 9000000) {
+            if (VersionNumberUtility::convertVersionNumberToInteger(VersionNumberUtility::getNumericTypo3Version()) < 9000000) {
                 $this->installTool->updateDbWithExtTablesSql($extTablesSqlContent);
             } else {
-                // Prevent the DefaultTcaSchema from enriching our definitions
+            	// Prevent the DefaultTcaSchema from enriching our definitions
                 $tcaBackup = $GLOBALS['TCA'];
                 $GLOBALS['TCA'] = [];
                 $sqlReader = GeneralUtility::makeInstance(SqlReader::class);
                 $schemaMigrator = GeneralUtility::makeInstance(SchemaMigrator::class);
                 $sqlStatements = [];
                 $sqlStatements[] = $extTablesSqlContent;
-                $sqlStatements =
-                    $sqlReader->getCreateTableStatementArray(implode(LF . LF, array_filter($sqlStatements)));
+                $sqlStatements = $sqlReader->getCreateTableStatementArray(implode(LF . LF, array_filter($sqlStatements)));
                 $updateStatements = $schemaMigrator->getUpdateSuggestions($sqlStatements);
                 $updateStatements = array_merge_recursive(...array_values($updateStatements));
                 $selectedStatements = [];
@@ -197,5 +207,102 @@ class ext_update
     public function access()
     {
         return true;
+    }
+
+    /**
+     * Loops over all loaded Extensions and collects the version info of every installed static_info_tables
+     * Extension. The Extension keys and version numbers are concated to a string:
+     *
+     * extension_key1:1.2.3
+     * extension_key2:2.3.4
+     * ...
+     *
+     * @return string
+     */
+    protected function buildExtensionVersionInfo()
+    {
+        $mainVersion = ExtensionManagementUtility::getExtensionVersion('static_info_tables');
+        $extensionVersions = ['static_info_tables:' . $mainVersion];
+
+        $loadedExtensions = array_unique(ExtensionManagementUtility::getLoadedExtensionListArray());
+        foreach ($loadedExtensions as $extensionKey) {
+            if (!$this->isStaticInfoTablesExtension($extensionKey)) {
+                continue;
+            }
+            $extensionVersion = ExtensionManagementUtility::getExtensionVersion($extensionKey);
+            $extensionVersions[] = $extensionKey . ':' . $extensionVersion;
+        }
+
+        return implode(LF, $extensionVersions);
+    }
+
+    /**
+     * Builds an URL to the update script with the forceUpdate GET parameter.
+     *
+     * @return string
+     */
+    protected function buildForceUpdateUrl()
+    {
+        $uriBuilder = $this->objectManager->get(UriBuilder::class);
+        return $uriBuilder->reset()
+            ->setArguments(['forceUpdate' => true])
+            ->uriFor(
+                'show',
+                ['extensionKey' => 'static_info_tables'],
+                'UpdateScript',
+                'Extensionmanager',
+                'tools_ExtensionmanagerExtensionmanager'
+            );
+    }
+
+    /**
+     * @return bool
+     */
+    protected function isBackendRequest()
+    {
+        return (bool)(TYPO3_REQUESTTYPE & TYPO3_REQUESTTYPE_BE);
+    }
+
+    /**
+     * Returns true when the StaticInfoTables.txt configuration file exists in the given Extension.
+     *
+     * @param string $extensionKey
+     * @return bool
+     */
+    protected function isStaticInfoTablesExtension($extensionKey)
+    {
+        $extensionInfoFile = ExtensionManagementUtility::extPath($extensionKey)
+            . 'Configuration/DomainModelExtension/StaticInfoTables.txt';
+        return file_exists($extensionInfoFile);
+    }
+
+    /**
+     * Returns true when the last stored update status is different from the current status
+     * or the forceUpdate GET parameter is provided.
+     *
+     * @return bool
+     */
+    protected function isUpdateRequired()
+    {
+        if ($this->isBackendRequest() && !empty(GeneralUtility::_GET('forceUpdate'))) {
+            return true;
+        }
+
+        $lastUpdateStatus = $this->registry->get('static_info_tables', 'last_update_status', false);
+        if (!$lastUpdateStatus) {
+            return true;
+        }
+
+        $extensionVersionInfo = $this->buildExtensionVersionInfo();
+        return $lastUpdateStatus !== $extensionVersionInfo;
+    }
+
+    /**
+     * Saves the last update status in the TYPO3 registry.
+     */
+    protected function storeLastUpdateStatus()
+    {
+        $extensionVersionInfo = $this->buildExtensionVersionInfo();
+        $this->registry->set('static_info_tables', 'last_update_status', $extensionVersionInfo);
     }
 }
