@@ -2,6 +2,7 @@
 
     * Resolves #91587: Streamline some redundant code in language pack
     * Resolves #91590: Fix ordering of record lists in current language in backend
+    * Resolves #88684: Only run update script when extensions have changed
 
 2020-06-03  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
 
